[package]
name = "rgwbasic-wasm"
version = "0.1.0"
authors = ["ldfallas <ldfallas@noemail>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rgwbasic = { path="../rgwbasic" }
wasm-bindgen = { version="0.2.84" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.61"
web-sys = { version = "0.3.4", features = [ 'Window','Headers','Request','RequestInit','RequestMode','Response' ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
